Added custom_none_of.cpp policy.cpp standart.cpp and upgraded main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,7 @@ add_executable(cpp_year2_lab2 main.cpp
         generate.h
         custom_none_of.cpp
         custom_none_of.h
-        measure.h)
+        measure.h
+        standart.cpp
+        policy.cpp
+        custom.cpp)
