--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(cpp_year2_lab2 main.cpp
         generate.cpp
         generate.h
-        custom_none_of.cpp
-        custom_none_of.h
+        custom.cpp
+        custom.h
         measure.h
         standart.cpp
         policy.cpp
